--- a/testPage.html
+++ b/testPage.html
@@ -10,7 +10,7 @@
 
   <tbody>
     <tr>
-      <td style="vertical-align: top; width: 743px;"><img style="width: 901px; height: 704px;" alt="" src="Soton_Map.png"><br>
+      <td id="chart_container" style="vertical-align: top; width: 743px;"><img style="width: 901px; height: 704px;" alt="" src="Soton_Map.png"><br>
       </td>
       <td style="vertical-align: top; width: 743px;">2<br><table style="text-align: left; width: 100%;" border="1" cellpadding="2" cellspacing="2"><tbody><tr><td style="vertical-align: top;"><br>
 <iframe src="https://www.youtube.com/embed/tQXmsZ_ph88?&amp;autoplay=1" allowfullscreen="" frameborder="0" height="315" width="560"></iframe>
@@ -20,7 +20,7 @@
       </td>
     </tr>
     <tr>
-      <td id="chart_container" style="vertical-align: top; width: 743px;"><br>
+      <td style="vertical-align: top; width: 743px;"><br>
       </td>
       <td style="vertical-align: top; width: 743px;">4<br>
 </td>
