--- a/testPage.html
+++ b/testPage.html
@@ -1,39 +1,80 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html><head>
-  
-  <meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
-  <title>Test Page</title>
+<html>
+	<head>
+		<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
+		<title>Test Page</title>
+		<style>
+#chart_container {
+	/*
+	width: 90%; /* or whatever is required */
+	text-align: center; /* ensures the image is always in the h-middle */
+	overflow: hidden; /* hide the cropped portion */
+	*/
+}
 
-  
-</head><body>
-<table style="text-align: left; width: 1157px; height: 776px;" border="0" cellpadding="2" cellspacing="2">
-
-  <tbody>
-    <tr>
-      <td id="chart_container" style="vertical-align: top; width: 743px;"><img style="width: 901px; height: 704px;" alt="" src="Soton_Map.png"><br>
-      </td>
-      <td style="vertical-align: top; width: 743px;">2<br><table style="text-align: left; width: 100%;" border="1" cellpadding="2" cellspacing="2"><tbody><tr><td style="vertical-align: top;"><br>
-<iframe src="https://www.youtube.com/embed/tQXmsZ_ph88?&amp;autoplay=1" allowfullscreen="" frameborder="0" height="315" width="560"></iframe>
-</td></tr><tr><td style="vertical-align: top;"><br>
-<iframe src="https://www.youtube.com/embed/tQXmsZ_ph88?&amp;autoplay=1" allowfullscreen="" frameborder="0" height="315" width="560"></iframe>
-</td></tr></tbody></table><br>
-      </td>
-    </tr>
-    <tr>
-      <td style="vertical-align: top; width: 743px;"><br>
-      </td>
-      <td style="vertical-align: top; width: 743px;">4<br>
-</td>
-      
-    </tr>
-  </tbody>
-</table>
-
-<br>
-
-<br>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>
-<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="chartcode.js"></script>
-</body></html>
+#image_container {
+    width: 700px;
+    height: 300px;
+    overflow: hidden;
+}
+#image_container img {
+	margin-left: auto;
+	margin-right: auto;
+	position: relative;
+	margin: 0px 0 0 -10px;
+	/*border: 1px red solid;*/
+	/*blah blah*/
+}
+		</style>
+	</head>
+	<body>
+		<table style="text-align: left; width: 1157px; height: 776px;" border="0" cellpadding="2" cellspacing="2">
+			<tbody>
+				<tr>
+					<td id="chart_container" style="vertical-align: top; width: 743px;">
+						<!--<div id="image_container" style="position:static; width:100%; height:100%">-->
+						<div id="image_container">
+							<img style="width: 901px; height: 704px;" alt="" src="Soton_Map.png">
+						</div>
+						<br>
+					</td>
+					<td style="vertical-align: top; width: 743px;">
+						<br>
+						<table style="text-align: left; width: 100%;" border="1" cellpadding="2" cellspacing="2">
+							<tbody>
+								<tr>
+									<td style="vertical-align: top;">
+										<br>
+										<iframe src="https://www.youtube.com/embed/tQXmsZ_ph88?&amp;autoplay=1" allowfullscreen="" frameborder="0" height="315" width="560">
+										</iframe>
+									</td>
+								</tr>
+								<tr>
+									<td style="vertical-align: top;">
+										<br>
+										<iframe src="https://www.youtube.com/embed/tQXmsZ_ph88?&amp;autoplay=1" allowfullscreen="" frameborder="0" height="315" width="560">
+										</iframe>
+									</td>
+								</tr>
+							</tbody>
+						</table>
+						<br>
+					</td>
+				</tr>
+				<tr>
+					<td style="vertical-align: top; width: 743px;">
+						<br>
+					</td>
+					<td style="vertical-align: top; width: 743px;">
+						4<br>
+					</td>
+				</tr>
+			</tbody>
+		</table>
+		<br>
+		<br>
+		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.bundle.min.js"></script>
+		<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="chartcode.js"></script>
+	</body></html>
