--- a/testPage.html
+++ b/testPage.html
@@ -14,16 +14,18 @@
 
 #image_container {
     width: 700px;
-    height: 300px;
+    height: 320px;
     overflow: hidden;
 }
 #image_container img {
-	margin-left: auto;
-	margin-right: auto;
+	margin-top: -30px;
+	margin-right: -50px;
+	margin-bottom: 0px;
+	margin-left: -100px;
 	position: relative;
-	margin: 0px 0 0 -10px;
+	filter: grayscale(50%);
+	/*margin: 0px 0 0 -10px;*/
 	/*border: 1px red solid;*/
-	/*blah blah*/
 }
 		</style>
 	</head>
@@ -32,7 +34,7 @@
 			<tbody>
 				<tr>
 					<td id="chart_container" style="vertical-align: top; width: 743px;">
-						<!--<div id="image_container" style="position:static; width:100%; height:100%">-->
+						<text>West Quay</text>
 						<div id="image_container">
 							<img style="width: 901px; height: 704px;" alt="" src="Soton_Map.png">
 						</div>
