--- a/testPage.html
+++ b/testPage.html
@@ -4,18 +4,39 @@
 		<meta content="text/html; charset=ISO-8859-1" http-equiv="content-type">
 		<title>Test Page</title>
 		<style>
+#body {
+	background-color: Ghostwhite;
+}
+.table_element {
+	border: 2px #330000 solid;
+}
+.chart_canvas {
+	border: 0px #804600 solid;
+}
+#main_header {
+	text-align: center;
+	margin: 5px auto 15px; /*first number is top, last is bottom*/
+}
 #chart_container {
-	/*
 	width: 90%; /* or whatever is required */
 	text-align: center; /* ensures the image is always in the h-middle */
 	overflow: hidden; /* hide the cropped portion */
-	*/
 }
-
+#main_table {
+	text-align: left;
+	align: center;
+	width: 1200px;
+	height: 776px;
+	border: 0;
+	cellpadding: 5;
+	cellspacing: 5;
+	margin:-10px auto;
+}
 #image_container {
-    width: 700px;
-    height: 320px;
-    overflow: hidden;
+   width: 700px;
+   height: 315px;
+   overflow: hidden;
+	/*border: 1px red solid;*/
 }
 #image_container img {
 	margin-top: -30px;
@@ -25,36 +46,35 @@
 	position: relative;
 	filter: grayscale(50%);
 	/*margin: 0px 0 0 -10px;*/
-	/*border: 1px red solid;*/
 }
 		</style>
 	</head>
-	<body>
-		<table style="text-align: left; width: 1157px; height: 776px;" border="0" cellpadding="2" cellspacing="2">
+	<body id="body">
+						<h1 id="main_header">West Quay: Live Air Quality Monitoring by SolentAirWatch</h1>
+		<table id="main_table">
 			<tbody>
 				<tr>
 					<td id="chart_container" style="vertical-align: top; width: 743px;">
-						<text>West Quay</text>
-						<div id="image_container">
+						<div class= "table_element" id="image_container">
 							<img style="width: 901px; height: 704px;" alt="" src="Soton_Map.png">
 						</div>
 						<br>
 					</td>
 					<td style="vertical-align: top; width: 743px;">
-						<br>
-						<table style="text-align: left; width: 100%;" border="1" cellpadding="2" cellspacing="2">
+						<!--<br>-->
+						<table style="text-align: left; width: 100%;" border="0" cellpadding="0" cellspacing="0">
 							<tbody>
 								<tr>
 									<td style="vertical-align: top;">
-										<br>
-										<iframe src="https://www.youtube.com/embed/tQXmsZ_ph88?&amp;autoplay=1" allowfullscreen="" frameborder="0" height="315" width="560">
+										<!--<br>-->
+										<iframe class= "table_element" src="https://www.youtube.com/embed/tQXmsZ_ph88?&amp;autoplay=1" allowfullscreen="" frameborder="0" height="315" width="560">
 										</iframe>
 									</td>
 								</tr>
 								<tr>
 									<td style="vertical-align: top;">
 										<br>
-										<iframe src="https://www.youtube.com/embed/tQXmsZ_ph88?&amp;autoplay=1" allowfullscreen="" frameborder="0" height="315" width="560">
+										<iframe class= "table_element" src="https://www.youtube.com/embed/tQXmsZ_ph88?&amp;autoplay=1" allowfullscreen="" frameborder="0" height="315" width="560">
 										</iframe>
 									</td>
 								</tr>
